# job-search-agent

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  WORKSHOP_GUIDE.md  main.py  pyproject.toml  requirements.txt
docs/: BEST_PRACTICES.md  CUSTOMIZATION.md  SETUP.md  TROUBLESHOOTING.md
examples/: example_output.txt
src/: __init__.py  agents.py  config.py  tasks.py  tools.py
tests/: __init__.py  test_tools.py
