[project]
name = "job-search-agent"
version = "1.0.0"
description = "Multi-agent job search system using CrewAI and Claude"
authors = [
    {name = "Claude Builder Club @ UC Irvine"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "crewai>=0.86.0",
    "crewai-tools>=0.15.0",
    "langchain-anthropic>=0.3.7",
    "anthropic>=0.39.0",
    "langchain>=0.3.13",
    "langchain-core>=0.3.28",
    "langchain-community>=0.3.13",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
