[project]
name = "job-search-agent"
version = "1.0.0"
description = "Multi-agent job search system using CrewAI and Claude"
authors = [
    {name = "Claude Builder Club @ UC Irvine"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "crewai>=0.203.1",
    "crewai-tools>=0.76.0",
    "langchain-anthropic>=1.0.0",
    "anthropic>=0.71.0",
    "langchain>=1.0.1",
    "langchain-core>=1.0.0",
    "langchain-community>=0.4",
    "requests>=2.32.5",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "black>=25.9.0",
    "ruff>=0.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = ["integration: tests that call live APIs"]
